Bug 453545: InstallTrigger broken when doing multiple signed XPI installs. r=biesi, a1.9.0.5=dveditz