modules/libjar/nsJAR.cpp
@@ -199,6 +199,7 @@ nsJAR::Close()
   }
 
   mParsedManifest = PR_FALSE;
+  mManifestData.Reset();
   mGlobalStatus = JAR_MANIFEST_NOT_PARSED;
   mTotalItemsInManifest = 0;
 
